Validation Corrections & security measures

--- a/css/index.html
+++ b/css/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />        
         <title>403 :: Currency Exchanger</title>
-        <link href="main.css" rel="stylesheet" type="text/css"/>
+        <link href="../css/main.css" rel="stylesheet" type="text/css"/>
         <link rel="icon" href="../images/money.png" type="image/x-icon"/>
     </head>
     <body>
@@ -12,7 +12,7 @@
     			<div id="title"><span class="title">Currency Exchanger</span></div>
     			<div id="menus">
                     <ul id="menubar">
-                    <li class="currentpage"><a href="../index.php">Home</a></li>
+                    <li><a href="../index.php">Home</a></li>
                     <li><a href="../views/Currencies.php">Currencies</a></li>
                     <li><a href="../views/Countries.php">Countries</a></li>
                     <li><a href="../views/Currencyrates.php">Currencyrates</a></li>
