--- a/controllers/index.html
+++ b/controllers/index.html
@@ -12,7 +12,7 @@
     			<div id="title"><span class="title">Currency Exchanger</span></div>
     			<div id="menus">
                     <ul id="menubar">
-                    <li class="currentpage"><a href="../index.php">Home</a></li>
+                    <li><a href="../index.php">Home</a></li>
                     <li><a href="../views/Currencies.php">Currencies</a></li>
                     <li><a href="../views/Countries.php">Countries</a></li>
                     <li><a href="../views/Currencyrates.php">Currencyrates</a></li>
