--- a/images/index.html
+++ b/images/index.html
@@ -4,7 +4,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />        
         <title>403 :: Currency Exchanger</title>
         <link href="../css/main.css" rel="stylesheet" type="text/css"/>
-        <link rel="icon" href="money.png" type="image/x-icon"/>
+        <link rel="icon" href="../images/money.png" type="image/x-icon"/>
     </head>
     <body>
         <div id="wrapper">
@@ -12,7 +12,7 @@
     			<div id="title"><span class="title">Currency Exchanger</span></div>
     			<div id="menus">
                     <ul id="menubar">
-                    <li class="currentpage"><a href="../index.php">Home</a></li>
+                    <li><a href="../index.php">Home</a></li>
                     <li><a href="../views/Currencies.php">Currencies</a></li>
                     <li><a href="../views/Countries.php">Countries</a></li>
                     <li><a href="../views/Currencyrates.php">Currencyrates</a></li>
