--- a/models/index.html
+++ b/models/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />        
-        <title>Home :: Currency Exchanger</title>
+        <title>403 :: Currency Exchanger</title>
         <link href="../css/main.css" rel="stylesheet" type="text/css"/>
         <link rel="icon" href="../images/money.png" type="image/x-icon"/>
     </head>
@@ -12,7 +12,7 @@
     			<div id="title"><span class="title">Currency Exchanger</span></div>
     			<div id="menus">
                     <ul id="menubar">
-                    <li class="currentpage"><a href="../index.php">Home</a></li>
+                    <li><a href="../index.php">Home</a></li>
                     <li><a href="../views/Currencies.php">Currencies</a></li>
                     <li><a href="../views/Countries.php">Countries</a></li>
                     <li><a href="../views/Currencyrates.php">Currencyrates</a></li>
